--- a/index.html
+++ b/index.html
@@ -178,75 +178,58 @@
 
             </div>
 
-            <div>
+            <div class="card">
+                <div class="flex">
+                    <div class="card-img"><img src="assets/react.png" alt=""></div>
 
-                <div>
-                <div class="next-skill-container">
-                    <div class="flex">
-                        <div class="next-skill-img"><img src="assets/react.png" alt=""></div>
+                    <div class="content">
+                        <div class="content-h2">ReactJS</div>
+                        <div class="content-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
 
-                        <div class="section-content">
-                            <div class="skill-title">ReactJS</div>
-                            <div class="skill-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-                            <a class="next-skill-link" href="https://react.dev/">Learn More</a>
-
-                        </div>
-
+                        <a href="https://react.dev/" class="content-a">Learn More</a>
                     </div>
+
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="flex">
+                    <div class="card-img"><img src="assets/nodejs.png" alt=""></div>
+
+                    <div class="content">
+                        <div class="content-h2">NodeJS</div>
+                        <div class="content-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+
+                        <a href="https://nodejs.org/en" class="content-a">Learn More</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="flex">
+                    <div class="card-img"><img src="assets/mongodb.png" alt=""></div>
+
+                    <div class="content">
+                        <div class="content-h2">MongoDB</div>
+                        <div class="content-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+
+                        <a href="https://www.mongodb.com/" class="content-a">Learn More</a>
+                    </div>
+
                 </div>
             </div>
 
 
-
-            <div>
-
-                <div>
-                <div class="next-skill-container">
-                    <div class="flex">
-                        <div class="next-skill-img"><img src="assets/nodejs.png" alt=""></div>
-
-                        <div class="section-content">
-                            <div class="skill-title">NodeJS</div>
-                            <div class="skill-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-                            <a class="next-skill-link" href="https://react.dev/">Learn More</a>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div>
-
-                <div>
-                <div class="next-skill-container">
-                    <div class="flex">
-                        <div class="next-skill-img"><img src="assets/mongodb.png" alt=""></div>
-
-                        <div class="section-content">
-                            <div class="skill-title">MongoDB</div>
-                            <div class="skill-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-                            <a class="next-skill-link" href="https://react.dev/">Learn More</a>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-
-            </div>
-
+        </div>
             
 
 
         </section>
 
 
-        
+
+
 
     </main>
 
