5th commit. final touch.

--- a/empty.html
+++ b/empty.html
@@ -1,39 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Cards</title>
-    <link rel="stylesheet" href="empty-styles.css">
-</head>
-<body>
+<form>
+    <textarea class="feedback-textarea" name="w3review" rows="4" cols="50">Suggest Me any feedback for me</textarea>
+    
+    <input class="submit-button" type="submit" value="Submit">
+  </form>
 
-    <div class="card">
-        <img src="react-logo.png" alt="ReactJS Logo">
-        <div class="content">
-            <h2>ReactJS</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-            <a href="#">Learn More</a>
-        </div>
-    </div>
 
-    <div class="card">
-        <img src="node-logo.png" alt="NodeJS Logo">
-        <div class="content">
-            <h2>NodeJS</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-            <a href="#">Learn More</a>
-        </div>
-    </div>
+  -----------
 
-    <div class="card">
-        <img src="mongodb-logo.png" alt="MongoDB Logo">
-        <div class="content">
-            <h2>MongoDB</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-            <a href="#">Learn More</a>
-        </div>
-    </div>
+  <div class="feedback-container">
+    <textarea name="" id="" class="feedback-textarea"> Suggest me any feedback for me </textarea>
 
-</body>
-</html>
+<input class="submit-button" type="submit">
+</div>
