--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="assets/Group.png" alt="">
                 <h1 class="header-title">"In the near future, I hope to become a Developer."</h1>
 
-                <p class="header-paragraph">Shahidul Islam, also known as Shahid, is a passionate computer science student from Bangladesh. He is enthusiastic about AI, machine learning, NLP, and blockchain. Alongside his studies, he is working on exciting projects like an AI-driven student assistant app and enjoys teaching college-level English and ICT subjects.</p>
+                <p class="header-paragraph">Shahidul Islam, also known as Shahid, is a passionate computer science student from Bangladesh. He is enthusiastic about AI, machine learning, NLP, and blockchain. Alongside his studies, he is working on exciting projects like an AI-driven student assistant app and enjoys teaching college-level Physics, Math, English and ICT subjects.</p>
                 <button class="header-button">Contact With Me</button>
 
             </div>
@@ -265,4 +265,4 @@
 
 
 <!-- Alhamdulillah 1st Intro Assignment done by 15-OCT-2024 -->
- 
+
